styles/main.css
main {
	align-items:         baseline;
	column-gap:          var(--alley);
	display:             grid;
	grid-auto-rows:      min-content;
	grid-template-columns:
		[ all-start aside-start body-start center-start five-start four-start intro-start left-start one-start recto-start right-start six-start three-start two-start verso-start ]
		minmax(0, 1fr)
		[ all-end aside-end body-end center-end five-end four-end intro-end left-end one-end recto-end right-end six-end three-end two-end verso-end ];
	padding-block-end:   calc(2 * min(var(--alley), calc(2 * var(--gutter))));
	padding-block-start: min(var(--alley), calc(2 * var(--gutter)));
	padding-inline:      var(--gutter);
	row-gap:             3rcap;

	/* TODO Revise vertical spacing above/below! */

	/* Space above anchor destination. */
	[id] { scroll-margin-block: 2cap }

	h1 { display: none } /* Don’t you dare. */

	/* Headings. */
	hgroup {
		&:has(> h2) {
			--size:   var(--size--h2);
			--weight: 500;

			grid-column:      all;
			margin-block-end: 2rlh;
		}

		&:has(> h3) {
			--size:   var(--size--h3);
			--weight: 700;

			margin-block-end: 1rlh;

			/* Back on the baseline. */
			> h3 { margin-block-start: calc(1rcap - 1cap) }
		}

		&:has(> h4) {
			--weight: 700;

			/* Optically match the titles. */
			> h4 { -webkit-text-stroke-width: 0.01em }

			/* TODO Down in size? */
		}

		+ section { margin-block-start: initial }

		/* TODO Come back to these! */
		> a { display: none }
	}

	/* Default to body width. */
	:where(&, section) > * { grid-column: body }

	/* Containers. */
	div,
	dl,
	ol,
	section,
	ul {
		align-items: inherit;
		display:     grid;
		row-gap:     inherit;
	}

	/* Subgridded `section`. */
	section {
		grid-column:           all;
		grid-template-columns: subgrid;
	}

	section:where(:not(:first-child)) {
		&:where(:has(> hgroup > h2)) {
			margin-block-start: 4rlh;

			> hgroup > h2 {
				/* TODO This is off on mobile. */
				margin-block-start: calc(1cap - 1rcap); /* Back on baseline. */
				padding-block-end:  1cap;
				position:           relative;

				/* TODO Fix baseline under! */

				/* Divider above it. */
				&::after {
					background-color:   currentcolor;
					block-size:         var(--stroke);
					border-radius:      calc(var(--stroke) / 2);
					content:            '';
					inset-block-end:    calc(-1 * var(--stroke) / 2);
					inset-inline-end:   calc(var(--right) - var(--stroke) / 2);
					inset-inline-start: calc(var(--left) - var(--stroke) / 2);
					position:           absolute;
				}
			}
		}

		&:where(:has(> hgroup > h3)) { margin-block-start: 3rlh }
		&:where(:has(> hgroup > h4)) { margin-block-start: 1rlh }
	}

	/* Lists, lists, lists. */
	:is(dl, ol, ul) {
		/* Extra spacing around loosies. */
		&:where(:not([class]), :not(:where([class]:not(.balance)))) {
			margin-block-start: 1lh;

			&:where(:not(:last-child)) { margin-block-end: 1lh }
		}

		/* Not “tag” lists. */
		&:where(:not(:has(> li > a > cite, > li > p:only-child > a > cite))) {
			/* TODO There has to be a simpler way to check for these! */

			/* Item inset. */
			> :where(dd, dt, li) { padding-inline-start: 2cap }

			/* ”Markers.” */
			> :where(dt, li) {
				position: relative;

				&::before {
					position: absolute;
					text-box: trim-both cap alphabetic;
				}
			}
		}

		/* “Tight” lists. */
		&:where(:not(:has(li > p))) { row-gap: 1rcap }

		/* More vertical space when the items have multiple paragraphs. */
		&:where(:has(:where(dt, li) > p:not(:only-child))) {
			row-gap: 5rcap;

			> :where(dt, li):where(:has(p:not(:only-child))) {
				display: grid;
				row-gap: 3rcap; /* Back to `main` spacing. */
			}
		}
	}

	:is(dl, ul:where(:not(:has(> li > a > cite, > li > p:only-child > a > cite)))) {
		margin-inline-start: 1cap;

		> :where(dt, li)::before {
			content:          '—';
			inset-inline-end: calc(100% - var(--right));
		}
	}

	ol {
		counter-reset:       index;
		margin-inline-start: 1em;

		> li::before {
			content:           counters(index, '.') '.';
			counter-increment: index;
			inline-size:       1em;
			inset-inline-end:  100%;
		}

		&:has(:nth-child(10)) {
			margin-inline-start: 1.25em;

			> li::before { inline-size: 1.25em }
		}
	}

	/* Link lists with our “tag” style. */
	ul:where(:has(li > a > cite, li > p:only-child > a > cite)) {
		grid-template-columns: minmax(auto, max-content);
	}

	/* TODO Longer text-after-cite blows up the common width of these! */

	*:where(:not(li)) > p:where(:has(a > cite)) { justify-self: start }

	/* More space above these when they aren’t manually in-columns. */
	ul,
	*:where(:not(li)) > p {
		&:where(:has(a > cite):not([class])) { margin-block-start: 1rlh }
	}

	/* TODO More structure here! */
	details {
		&:where(:not(:first-child)) { margin-block-start: 1rlh }
		&:where(:not(:last-child))  { margin-block-end:   1rlh }

		&[open]::details-content {
			--size:   var(--size--h2);
			--weight: 500;

			display:            grid;
			margin-block-start: 2rlh;
			row-gap:            inherit;

			> p { margin-block-start: calc(1cap - 1rcap) }
		}
	}

	/* Tables for the grade breakdown. */
	table {
		inline-size: fit-content;

		td:not(:first-child), th:not(:first-child) {
			border-inline-start: calc(3rcap - var(--left) - var(--right)) solid transparent;
		}

		tr:not(:first-child) td, tr:not(:first-child) th {
			border-block-start: 1rcap solid transparent;
		}

		td:last-child { text-align: end } /* Ersatz tabular numbers. */
	}

	/* TODO Move this to component? (And flatten that into native/Markdown?) */
	figure {
		align-items:           start;
		display:               grid;
		grid-column:           all;
		grid-template-columns: minmax(auto, max-content);
		position:              relative;
		row-gap:               1rlh;

		&:where(:not(:first-child)) { margin-block-start: 2rlh }
		&:where(:not(:last-child))  { margin-block-end:   2rlh }

		+ :where(figure) { margin-block-start: initial }

		> figcaption {
			align-items:       baseline;
			display:           flex;
			gap:               3rcap;
			padding-block-end: calc(1rlh - 1rcap);

			/* TODO Move/consolidate this with `links` one! */
			> a:has(cite) {
				--block: 1ex;

				cite {
					--icon:        '→';
					--gap:         initial;
					--icon--width: initial;

					&::after { position: initial }
				}
			}

			> span { text-box: trim-both cap alphabetic }
		}

		img,
		object,
		iframe {
			--height: calc(var(--lines) * 1rlh - 1rcap);

			max-block-size: var(--height, round(80svh, 1rcap));
		}

		&.multiply { img, object, iframe { mix-blend-mode: multiply } }

		/* TODO Shorthand classes for lines? Or specify units directly? */
	}

	aside {
		--weight: 500;

		background-color: white;
		border-radius:    var(--stroke);
		display:          grid;
		grid-column:      aside;
		outline-color:    var(--color);
		outline-offset:   round(up, calc(-1 * var(--stroke) * 2), var(--rounding));
		outline-style:    solid;
		outline-width:    round(down, calc(2 * var(--stroke)), var(--rounding));
		padding:          1rlh;
		place-items:      center;
		row-gap:          inherit;
		text-align:       center;

		&:where(:not(:first-child)) { margin-block-start: 2rlh }
		&:where(:not(:last-child))  { margin-block-end:   2rlh }

		> p:has(mark) {
			--weight:  700;
			--size:    var(--size--h3);
			--leading: 1lrh;

			margin-block-start: calc(1rcap - 1cap); /* Back on baseline. */
		}

		&.reverse {
			background-color: var(--color);

			* { --color: white }
		}
	}

	blockquote {
		--size:    var(--size--h2);
		--weight:  500;

		display:     grid;
		grid-column: aside;
		row-gap:     3rlh;
		text-wrap:   balance;

		&:where(:not(:first-child)) { margin-block-start: 2rlh }
		&:where(:not(:last-child))  { margin-block-end:   2rlh }

		&:has(+ p > a > cite) { margin-block-end: 1rlh }

		/* TODO Consolidate this with `figure` one! Figure out overrides. */
		+ p:has(a > cite) {
			--size:   initial;
			--weight: 700;

			color:          var(--color);
			grid-column:    aside;
			text-transform: uppercase;

			> a:has(cite) {
				--block: 1ex;

				display:           inline-block;
				margin-inline-end: 2cap;

				cite {
					--icon:        '→';
					--gap:         initial;
					--icon--width: initial;

					&::after { position: initial }
				}
			}

			&:not(:last-child) { margin-block-end: 2rlh }
		}
	}

	hr {
		--size:   var(--size--h2);
		--weight: 500;

		block-size:         1rcap; /* Keep on baseline. */
		grid-column:        all;
		margin-block-end:   1rlh;
		margin-block-start: 2rlh;
		position:           relative;

		&::after {
			background-color: var(--color);
			block-size:       var(--stroke);
			border-radius:    var(--stroke);
			content:          '';
			display:          block;
			inset-block-end:  calc(-1 * var(--stroke) / 2);
			inset-inline:     calc(-1 * var(--stroke) / 2);
			position:         absolute;
		}
	}

	/* Dim inert stuff. */
	*[inert] {
		--note: var(--color); /* Don’t double-fade. */

		opacity: var(--disabled--opacity);

		*[inert] { opacity: inherit } /* Section-nesting adds a dupe. */
	}

	:where(.intro) {
		--leading: 1rlh;
		--size:    var(--size--h3);
		--weight:  300;

		margin-block-start:        calc(1rcap - 1cap); /* Back on baseline. */
		-webkit-text-stroke-width: 0.01em; /* Match to body copy. */

		&:not(:where(:first-child)) { margin-block-start: 1rlh }

		+ * { margin-block-start: 1rlh }

		/* TODO `aria-label` instead? */
	}

	:where(.note),
	:where(li, p):where(:has(> a > cite)),
	:where(figcaption) {
		--leading: 1rlh;
		--size:    var(--size--note);
		--weight:  500;

		color:               var(--note);
		max-inline-size:     56ch; /* Close to `body`. */
		padding-block-start: calc(1rcap - 1cap); /* Back on baseline. */
		text-wrap:           balance;

		* { color: inherit } /* For `abbr`. */

		/* TODO `role` instead? */
	}

	/* Manual column placements. */
	:where(.all, .aside, .body, .center, .five, .four, .left, .one, .recto, .right, .six, .three, .two, .verso) {
		display:  grid;
		grid-row: span var(--rows, 1);

		/* TODO These need space above/below on mobile. */
	}

	/* TODO Organize these! */
	.start  { align-self: start }
	.stack  { figure { margin: initial } }

	*:has(> .sticky) {
		align-self: stretch;

		.sticky {
			inset-block-start: 5rlh;
			position:          sticky;
		}
	}

	.intro  { grid-column: intro } /* Up top to be cascaded over. */
	.body .intro { grid-column: initial } /* Override for nested. */

	.all    { grid-column: all }
	.aside  { grid-column: aside }
	.body   { grid-column: body }
	.center { grid-column: center }
	.five   { grid-column: five }
	.four   { grid-column: four }
	.left   { grid-column: left }
	.one    { grid-column: one }
	.recto  { grid-column: recto }
	.right  { grid-column: right }
	.six    { grid-column: six }
	.three  { grid-column: three }
	.two    { grid-column: two }
	.verso  { grid-column: verso }

	/* Some `--rows` shorthands. */
	.rows--2 { --rows: 2 }
	.rows--3 { --rows: 3 }
	.rows--4 { --rows: 4 }
	.rows--5 { --rows: 5 }
	.rows--6 { --rows: 6 }

	/* Baseline reference grid. */
	&::before {
		background-image:    linear-gradient(color-mix(in srgb, #38f, transparent 25%) 0.5px, transparent 0.5px);
		background-position: 0 1cap;
		background-size:     100% 1rlh;

		/* content:             ''; */
		inset:               0;
		pointer-events:      none;
		position:            fixed;
		z-index:             1;
	}

	/* The actual columns. */
	@media (orientation: landscape) and (width >= 35em), (width >= 60em) {
		grid-template-columns:
			[ all-start body-start intro-start left-start one-start verso-start ]
			minmax(0, 1fr)
			[ aside-start one-end two-start]
			minmax(0, 1fr)
			[ center-start left-end three-start two-end ]
			minmax(0, 1fr)
			[four-start recto-start three-end verso-end]
			minmax(0, 1fr)
			[ body-end center-end five-start four-end right-start ]
			minmax(0, 1fr)
			[ intro-end five-end six-start]
			minmax(0, 1fr)
			[ all-end aside-end recto-end right-end six-end];
	}
}

